--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,10 @@
 <html lang="en"></html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Web Careers</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
       h1{
         font-size: 40px;
@@ -23,7 +26,7 @@
         color: rgb(100, 100, 100);
         text-align: center;
       }
-      p{
+      .bodytext{
         font-size: 20px;
         font-family: Roboto;
         color: rgb(80, 80, 80);
@@ -41,13 +44,18 @@
     <h1>Web Careers</h1>
     <img id="banner" src= "/static/girl.jpg">
     <h2>ABOUT US</h2>
-    <p>
+    <p class= "bodytext">
       This is a career website for wed developers.
     </p>
     <h2>Open Positions</h2>
-    <p>TODO</p>
+    <p class="bodytext">
+      {% for job in jobs %}
+        {% include 'jobitems.html' %}
+      {% endfor %}
+    </p>
     <div style="text-align:center;">
-    <button>Contact Us</button>
+      <button type="button" class="btn btn-dark">Contact Us</button>
+      <p class="mt-4">Copyright 2024, Poorva</p>
         <div>
     </div>
   </body>
