--- a/templates/home.html
+++ b/templates/home.html
@@ -7,56 +7,33 @@
     <title>Web Careers</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-      h1{
-        font-size: 40px;
-        font-family: Roboto;
-        font-weight: bold;
-        color: rgb(100, 100, 100);
-        text-align: center;
-      }
-
+  
       #banner{
         width: 100%;
         height: 400px;
         object-fit: cover;
-      }
-      h2{
-        font-size: 32px;
-        font-family: Roboto;
-        color: rgb(100, 100, 100);
-        text-align: center;
-      }
-      .bodytext{
-        font-size: 20px;
-        font-family: Roboto;
-        color: rgb(80, 80, 80);
-        text-align: center;
-      }
-
-      #container{
-        max-width:720px;
-        margin: 0 auto 0 auto;
+        margin-bottom: 16px;
       }
     </style>
   </head>
   <body>
-    <div id="container">
-    <h1>Web Careers</h1>
+    {% include 'nav.html' %}
     <img id="banner" src= "/static/girl.jpg">
-    <h2>ABOUT US</h2>
-    <p class= "bodytext">
+    <div id="container">
+    <h1 class="text-center mt-2 mb-4">Web Careers</h1>
+    <p class= "lead">
       This is a career website for wed developers.
     </p>
-    <h2>Open Positions</h2>
+    <h2 class='text-center mt-2 mb-4'>Open Positions</h2>
     <p class="bodytext">
       {% for job in jobs %}
         {% include 'jobitems.html' %}
       {% endfor %}
     </p>
     <div style="text-align:center;">
-      <button type="button" class="btn btn-dark">Contact Us</button>
-      <p class="mt-4">Copyright 2024, Poorva</p>
+      <a class="btn btn-dark" href="mailto:poorva0311@gmail.com?subject=Queries">Contact Us</a>
         <div>
     </div>
+      {% include 'footer.html' %}
   </body>
 </html>
